# freshrss-agent

./: .bumpversion.cfg  .dockerignore  .env.example  404.html  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  a2a.json  connector_manifest.yml  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  overview.md  platform.md  usage.md
freshrss_agent/: __init__.py  __main__.py  agent_server.py  auth.py  freshrss_input_models.py  freshrss_response_models.py  kg_ingest.py  mcp_server.py
freshrss_agent/agent_data/: IDENTITY.md
freshrss_agent/api/: __init__.py  api_client_base.py  api_client_reader.py  api_client_subscriptions.py
freshrss_agent/connectors/: mcp_source_presets.json
freshrss_agent/mcp/: __init__.py  mcp_ingest.py  mcp_reader.py  mcp_subscriptions.py  mcp_system.py
freshrss_agent/ontology/: __init__.py  feed.ttl
freshrss_agent/prompts/: feed_intelligence_specialist.json  main_agent.json
freshrss_agent/skills/freshrss-feed-reader/: SKILL.md
freshrss_agent/skills/freshrss-knowledge-ingestion/: SKILL.md
freshrss_agent/skills/freshrss-starter/: SKILL.md
freshrss_agent/skills/freshrss-subscription-management/: SKILL.md
installation/: index.html
overview/: index.html
platform/: index.html
scripts/: validate_agent.py  verify_api_integration.py
search/: search_index.json
tests/: conftest.py  test_api_wrapper.py  test_auth.py  test_concept_parity.py  test_freshrss_mcp_validation.py  test_init_dynamics.py  test_kg_ingest.py  test_startup.py
usage/: index.html
