[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "freshrss-agent"
version = "2.0.0"
description = "FreshRSS API + MCP Server + A2A Server"
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.12, <3.15"
dependencies = [ "agent-utilities>=2.0.0", "python-dotenv>=1.2.2",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=2.0.0",]
agent = [ "agent-utilities[agent,logfire]>=2.0.0",]
all = [ "freshrss-agent[mcp,agent,logfire]>=2.0.0",]
test = [
    "pytest-xdist>=3.8.0", "pytest>=9.1.1", "pytest-asyncio>=1.4.0", "pytest-cov>=7.1.0",]

[project.scripts]
freshrss-mcp = "freshrss_agent.mcp_server:mcp_server"
freshrss-agent = "freshrss_agent.agent_server:agent_server"

[project.entry-points."agent_utilities.skill_providers"]
freshrss-agent = "freshrss_agent.skills"

[project.entry-points."agent_utilities.prompt_providers"]
freshrss-agent = "freshrss_agent.prompts"

[project.entry-points."agent_utilities.ontology_providers"]
freshrss-agent = "freshrss_agent.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
freshrss-agent = "freshrss_agent.connectors"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
freshrss_agent = [ "mcp_config.json", "prompts/**", "skills/**", "ontology/**", "connectors/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
